2008-12-23  Claude Paroz  <claude@2xlibre.net>

	* stats/conf/settings_sample.py: NOTIFICATIONS_TO is now a list.
	* stats/models.py: Syntax fix.
	* stats/tests/__init__.py: Add more tests (notification email, invalid
	branch)
	* stats/utils.py: Use django mail module instead of directly calling
	smtplib.

2008-12-23  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Always compute stats for languages containing LINGUAS
	errors, to check if the error has been resolved.
	Fixes #565442.

2008-12-22  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* stats/models.py: New boolean argument to disable the update of
	statistics at Branch saving.

2008-12-20  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* people/urls.py: Fix to allow email as slug in URL.

2008-12-20  Claude Paroz  <claude@2xlibre.net>

	* stats/management/commands/update-stats.py: Enclose update_stats in a try
	statement so as failure doesn't stop further updates. 
	* stats/models.py: Use exceptions for handling errors in checkout().
	Use thread locking to prevent concurrent VCS checkout (in a same branch
	instance).
	Fix save() signature.
	Subclass delete() function for branches to remove a VCS repo on the
	filesystem when the branch is deleted.
	* stats/tests/__init__.py: Add basic unit tests.

2008-12-20  Claude Paroz  <claude@2xlibre.net>

	* media/css/main.css: Various CSS improvements.
	* people/forms.py: New form to edit profile.
	* templates/people/person_detail.html:
	* people/urls.py:
	* people/views.py: Add the possibility to edit personal profile from
	person_detail template.
	* people/models.py: Add translatable help_text and field names because
	they are used in profile form.
	* templates/module_detail.html: Small adjustments to adapt main.css
	changes.
	* stats/models.py: Minor fixes.

2008-12-19  Claude Paroz  <claude@2xlibre.net>

	* teams/models.py: Add get_coordinator for FakeTeam.
	* teams/views.py: Add empty mem_groups tuple for FakeTeam.
